en/docs/assets/css/theme.css
/* ... */
.mb-config-catalog .mb-config .param > .param-name > span::before {
    content: '';
    display: inline-block;
    width: 2px;
    height: 8px;
    background-color: #ff7043;
    margin: -4px 10px 0;
    vertical-align: middle;
}

.mb-config-catalog .mb-config .param > .param-name > span::after {
    content: '';
    position: absolute;
    border-top: 2px solid #ff7043;
    width: 10px;
    left: 0;
    top: 2.3em;
}

.mb-config-catalog .mb-config .param:first-of-type > .param-name::before {
    content: '';
    display: block;
    position: absolute;
    left: -2px;
    top: 0;
    border-left: 3px solid #fff;
    height: 34px;
}

.mb-config-catalog .mb-config .param:last-of-type > .param-name,
.mb-config-catalog .mb-config .param.last > .param-name {
    position: relative;
}

.mb-config-catalog .mb-config .param:last-of-type > .param-name::after,
.mb-config-catalog .mb-config .param.last > .param-name::after {
    content: '';
    display: block;
    position: absolute;
    left: -2px;
    border-left: 3px solid #fff;
    top: 36px;
    background-color: #fff;
    bottom: 0;
}

.mb-config-catalog .mb-config .param > .param-info {
    display: table-cell;
    width: 100%;
    border-bottom: 1px solid #eee;
    padding: 10px 10px 10px 0;
    box-sizing: border-box;
}

.mb-config-catalog .mb-config .param-default {
    font-size: .95em;
}

.mb-config-catalog .mb-config .param-default::before {
    content: 'Default: ';
}

.mb-config-catalog .mb-config .param-type {
    color: #b5b5b5;
}

@media only screen and (min-width: 100em) {
    .mb-config-catalog .mb-config .param > .param-name > span::before {
        margin: 0 10px;
    }

    .mb-config-catalog .mb-config .param:first-of-type > .param-name::before {
        height: 38px;
    }
    
    .mb-config-catalog .mb-config .param:last-of-type > .param-name::after,
    .mb-config-catalog .mb-config .param.last > .param-name::after {
        top: 40px;
    }
}

@media (max-width: 767px) {
    .mb-config-catalog {
        margin-bottom: 3rem;
    }

    .mb-config-catalog,
    .mb-config-catalog > section,
    .mb-config-catalog > section > .mb-config-options,
    .mb-config-catalog > section > .mb-config-example {
        display: block;
        width: 100% !important;
    }
    
    .mb-config-catalog > section:not(.title) > .mb-config-options {
        padding-bottom: 1rem;
    }
}

.hljs-title,
.hljs-section {
    color: #ff7043;
    font-weight: normal;
}

.hljs-type,
.hljs-string,
.hljs-number,
.hljs-selector-id,
.hljs-selector-class,
.hljs-quote,
.hljs-template-tag,
.hljs-deletion {
    color: #ff7043;
}

.home_icon {
    height: 45px;
    margin-right: -12px;
    vertical-align: middle;
}

.home_icon a {
    margin-top: 4px; 
}

.home_icon a i {
    font-size: 25px; 
}

.md-nav__link[data-md-state=blur] {
    color: rgba(0,0,0,.54);
}

.quick_links {
    float: right;
    height: 53px;
}

.md-tabs__list {
    display: inline-block;
}

.nav_link {
    color: #fff;
    font-size: 34px;
    -webkit-transition: right 0.2s linear;
    -khtml-transition: right 0.2s linear;
    -moz-transition: right 0.2s linear;
    -ms-transition: right 0.2s linear;
    transition: right 0.2s linear;
    z-index: 2;
    padding-left: 20px;
    opacity: 0.7;
    margin-top: 12px;
}

.toc_icon {
    font-size: 21px;
    background: #000;
    width: 26px;
    height: 26px;
    line-height: 26px;
    border-radius: 50%;
    padding-left: 3px;
    float: left;
    left: -9px;
    top: -14px;
}

.nav_link:hover,
.edit_link.active:hover  {
    opacity: 1;
}

.edit_link {
    font-size: 24px;
    margin-top: 18px;
    opacity: 0;
    transition: color .25s,opacity .1s;
    display: none;
}

.edit_link.active {
    opacity: 0.7;
    display: block;
}

.toc_icon:hover {
    opacity: 1;
    background: #ff5000;
}

.md-header-nav {
    padding-right: 0;
}

@media only screen and (min-width: 76.25em) {
    .md-search__inner {
        margin-right: 0;
    }
}

@media only screen and (min-width: 60em) {
    .md-search {
        padding-right: 0;
    }
}

@media only screen and (max-width: 76.1875em) {
    html .md-nav--primary .md-nav__title--site .md-nav__button {
        font-size: 1.9rem;
        padding: 0 0 0 .4rem;
        height: 2.2rem;
        width: 3.6rem;
    }

    html .md-nav--primary .md-nav__title {
        padding: 2.5rem .8rem .2rem;
        line-height: .9rem;
        white-space: unset;
        background-color: rgba(0,0,0,.01);
        border-top: 3px solid #ff7043;
        box-shadow: 0 0 0.2rem rgba(0,0,0,.1), 0 0.2rem 0.4rem rgba(0,0,0,.2);
    }

}

@media only screen and (max-width: 76.1875em) {
    html [data-md-color-primary=deep-orange] .md-nav--primary .md-nav__title--site {
        background-color: #fff;
        border-top: 3px solid #ff7043;
        box-shadow: 0 0 0.2rem rgba(0,0,0,.1), 0 0.2rem 0.4rem rgba(0,0,0,.2);
        color: #212121;
    }
}

.feedbackBtn {
    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
    background: rgb(38, 50, 56);;
    color: #fff;
    font-size:  .7rem;
    position: fixed;
    right: 0;
    top: 50%;
    border-radius: 6px 0px 0px 6px;
    writing-mode: vertical-lr;
    padding: 15px 2px;
    line-height: 30px;
    box-shadow: 0 1px 0 rgba(153, 153, 153, 0.25) inset, 0 -1px 0 rgba(0, 0, 0, 0.25) inset;
}

.feedbackBtn:hover {
    background-color: #3c464c;
}

.md-footer-nav {
    background-color: rgba(0, 0, 0, 0.67);
}

.md-footer-nav__link {
    padding-top: 1rem;
    padding-bottom: 0.1rem;
}

.md-footer-copyright__highlight {
    padding-right: 10px;
    border-right: 1px solid #575757;
    margin-right: 10px;
    display: inline-block;
}

.text--replace {
    overflow: hidden;
    color: transparent;
    text-indent: 100%;
    white-space: nowrap
}
/* ... */

